--- a/style.css
+++ b/style.css
@@ -117,6 +117,21 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    visibility: hidden;
+}
+
+.modal-overlay-visible{
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    visibility: visible;
 }
 
 .modal{
