--- a/style.css
+++ b/style.css
@@ -58,8 +58,11 @@
     border-radius: 1rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: start;
+    justify-content: start;
+    align-items: stretch;
+    column-gap: 1.5rem;
+    flex-wrap: wrap;
+    row-gap: 1.5rem;
 }
 
 .research-item{
@@ -74,6 +77,7 @@
     justify-content: start;
     align-items: start;
     row-gap: 0.8rem;
+    flex-grow: 1;
 }
 
 .title-and-delete-container{
